--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 * {
 	box-sizing: border-box;
+}
+body {
+	font-family: 'Roboto', sans-serif;
 }
 .wrapper {
 	margin: auto;
@@ -9,67 +14,95 @@
 
 /*=== HEADER ===*/
 header {
-	border-bottom: 5px solid #000;
+	border-bottom: 8px solid #000;
 	margin-bottom: 10px;
 }
 nav {
 	width: 100%;
-	height: 55px;
+	height: 85px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	font-size: 20px;
 }
-nav ul {
+.tabs {
 	padding: 0;
+	margin: 0;
+	height: 100%;
 	display: flex;
-
 }
-nav li {
+.tabs li {
 	display: block;
 	margin: 0 30px 0 0;
+	border: 5px solid transparent;
+	padding: 1.3em 0.3em 0 0.1em;
+	border-bottom: none;
+	cursor: pointer;
 }
-header img {
-	width: 80px;
-	height: 40px;
+.tabs .tab-active {
+	border-color: #000;
 }
-
+.tabs a {
+	color: inherit;
+	text-decoration: none;
+}
+/*header img {
+	width: auto;
+	height: auto;
+}*/
 /*=== CATALOG ===*/
 table {
 	width: 100%;
 	border-collapse: collapse;
+	font-size: 22px;
 }
 tr {
-	height: 30px;
+	height: 60px;
 }
 th {
 	background-color: #c88f67;
 }
 td {
 	color: #909090;
+	padding-left: 1.2em;
 }
 td, th {
-	border: 3px solid #c88f67;
+	border: 5px solid #c88f67;
 	font-weight: bold;
+}
+th:first-child, td:first-child {
+	width: 25%;
+}
+th:nth-child(2), td:nth-child(2) {
+	width: 20%;
+}
+th:last-child, td:last-child {
+	width: 55%;
 }
 
 tr:last-child {
-	height: calc(100vh - 131px);
+	height: calc(100vh - 225px);
 }
 tr:last-child td {
 	border-bottom: none;
 }
 
 /*=== FORM ===*/
+form {
+	margin-top: 30px;
+	font-weight: bold;
+	font-size: 24px;
+}
 label {
-	margin-bottom: 25px;
+	margin-bottom: 52px;
 	display: flex;
 /*	display: block; !*MOBILE*!*/
 }
 label span {
 	display: inline-flex;
-	width: 15%;
+	width: 20%;
 	border-style: solid;
-	border-width: 3px;
+	border-width: 5px;
 	border-right: none;
 	text-align: center;
 	justify-content: center;
@@ -78,17 +111,44 @@ label span {
 	padding: 4px 25px 2px 6px; !*MOBILE*!*/
 }
 input:not([type="submit"]) {
-	width: 85%;
-	height: 45px;
+	width: 80%;
+	height: 80px;
 	border-style: solid;
-	border-width: 3px;
+	border-width: 5px;
 /*	display: block; !*MOBILE*!*/
 }
 [type="submit"] {
-	border: 3px solid #c3c3c3 ;
+	border: 5px solid #c3c3c3 ;
 	background-color: #fff;
 	color: #c3c3c3;
-	width: 200px;
-	height: 45px;
+	width: 300px;
+	height: 80px;
 	cursor: pointer;
+}
+.inp-grey span, .inp-grey input {
+	color: #c3c3c3;
+}
+.inp-red span, .inp-red input {
+	box-sizing: content-box;
+	color: #e83014;
+	border-bottom-width: 45px;
+}
+.inp-red input {
+	height: 68px;
+}
+.inp-red {
+	margin-bottom: 12px;
+	position: relative;
+}
+.inp-red:after {
+	content: 'Неверный формат вводимых данных';
+	font-size: 12px;
+	letter-spacing: 0.8px;
+	color: #fff;
+	position: absolute;
+	bottom: 14px;
+	left: 20px;
+}
+.inp-green span, .inp-green input {
+	color: #329d30;
 }
