--- a/css/style.css
+++ b/css/style.css
@@ -37,13 +37,16 @@ nav {
 .btn-menu {
 	display: none;
 }
-.menu {
+.drop-menu {
+	height: 100%;
+}
+.drop-menu ul {
+	display: flex;
+	height: 100%;
 	padding: 0;
 	margin: 0;
-	height: 100%;
-	display: flex;
 }
-.menu li {
+.drop-menu li {
 	display: block;
 	margin: 0 30px 0 0;
 	border: 5px solid transparent;
@@ -51,56 +54,63 @@ nav {
 	border-bottom: none;
 	cursor: pointer;
 }
-.menu .tab-active {
+.drop-menu .tab-active {
 	border-color: #000;
 }
-.menu a {
+.drop-menu a {
 	color: inherit;
 	text-decoration: none;
 }
 
 /*=== POPUP ===*/
-.popup-login {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-end;
+.drop-login {
+	display: none;
 	flex-shrink: 0;
 	position: absolute;
 	top: 85px;
 	right: 0;
-	background-color: #000;
-	padding: 1em 6em 2em 1.5em;
 	z-index: 10;
+	background-color: #000;
 }
-.popup-login input {
+.drop-login form {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
+	padding: 1em 6em 2em 1.5em;
+}
+.drop-login input {
 	color: #fff;
 	background-color: #000;
 	font-size: 1.1em;
 	border: 3px solid #fff;
 }
-.popup-login input:focus {
+.drop-login input:focus {
 	-webkit-box-shadow: inset 0 0 6px 1px #fff;
 	-moz-box-shadow: inset 0 0 6px 1px #fff;
 	box-shadow: inset 0 0 6px 1px #fff;
 }
-.popup-login ::-moz-placeholder{
+.drop-login ::-moz-placeholder{
 	color: #fff;
+	opacity: 1;
 }
-.popup-login :-moz-placeholder{
+.drop-login :-moz-placeholder{
 	color: #fff;
+	opacity: 1;
 }
-.popup-login ::-webkit-input-placeholder {
+.drop-login ::-webkit-input-placeholder {
 	color: #fff;
+	opacity: 1;
 }
-.popup-login :-ms-input-placeholder {
+.drop-login :-ms-input-placeholder {
 	color: #fff;
+	opacity: 1;
 }
-.popup-login input:not([type="submit"]) {
+.drop-login input:not([type="submit"]) {
 	margin-bottom: 1em;
-	width:330px;
+	width: 330px;
 	padding: 0.2em 1em;
 }
-.popup-login [type="submit"] {
+.drop-login [type="submit"] {
 	width: 50%;
 	padding: 0.2em 2em 0.2em 0.3em;
 }
@@ -110,9 +120,7 @@ nav {
 	width: 100%;
 	border-collapse: collapse;
 	font-size: 1.1em;
-}
-.tab-content tr {
-	height: 60px;
+	table-layout: fixed;
 }
 .tab-content th {
 	background-color: #c88f67;
@@ -124,18 +132,23 @@ nav {
 .tab-content td, th {
 	border: 5px solid #c88f67;
 	font-weight: bold;
+	word-wrap: break-word;
+	height: 60px;
 }
-.tab-content th:first-child, td:first-child {
+.tab-content th:first-child,
+.tab-content td:first-child {
 	width: 25%;
 }
-.tab-content th:nth-child(2), td:nth-child(2) {
+.tab-content th:nth-child(2),
+.tab-content td:nth-child(2) {
 	width: 20%;
 }
-.tab-content th:last-child, td:last-child {
+.tab-content th:last-child,
+.tab-content td:last-child {
 	width: 55%;
 }
 .tab-content tr:last-child {
-	height: calc(100vh - 225px);
+	height: calc(100vh - 226px);
 }
 .tab-content tr:last-child td {
 	border-bottom: none;
@@ -209,7 +222,7 @@ nav {
 }
 .tab-content .inp-warning:after {
 	content: 'Неверный формат вводимых данных';
-	font-size: 13px;
+	font-size: 0.6em;
 	font-weight: bold;
 	letter-spacing: 0.8px;
 	color: #fff;
@@ -234,90 +247,130 @@ nav {
 }
 
 /*=== MOBILE ===*/
-@media only screen and (max-width : 768px){
+@media only screen and (max-device-width : 768px), only screen and (max-width: 768px) {
+
+	body {
+		font-size: 2.2em;
+	}
 	main.wrapper {
 		width: 100%;
 	}
 	nav.wrapper {
 		position: static;
-		height: 95px;
+		height: 9vh;
 	}
-	input {
-		outline: none;
+	nav.wrapper img {
+		height: 6vh;
 	}
-
 	/*=== HEADER ===*/
 	header {
-		margin-bottom: 3px;
+		margin-bottom: 4px;
+		border-width: 14px;
 	}
 	.btn-menu {
 		display: block;
 	}
-	.menu {
-/*		display: none;*/
-		font-size: larger;
+	.drop-menu {
+		display: none;
 		position: absolute;
 		background-color: #000;
 		width: 100vw;
-		padding: 0 15vw 2.7em 15vw;
 		height: auto;
-		flex-direction: column;
-		align-items: flex-start;
-		color: white;
-		top: 85px;
+		top: 9vh;
 		left: 0;
 		z-index: 12;
 	}
-	.menu li {
+	.drop-menu ul {
+		font-size: larger;
+		padding: 0 15vw 2.7em 15vw;
+		flex-direction: column;
+		align-items: flex-start;
+		color: white;
+	}
+	.drop-menu li {
 		border-width: 3px;
 		border-bottom: 3px solid transparent;
 		padding: 0.6em 0.8em;
 		margin: 10px 0 0 0;
 	}
-	.menu .tab-active {
+	.drop-menu .tab-active {
 		border-color: #dcb832;
 	}
-	.menu a {
+	.drop-menu a {
 		color: inherit;
 		text-decoration: none;
 	}
 
 	/*=== POPUP ===*/
-	.popup-login {
+	.drop-login {
+		top: 9vh;
+	}
+	.drop-login form {
 		width: 100vw;
 		padding: 2em 20vw 3em 20vw;
 	}
-	.popup-login input:not([type="submit"]) {
+	.drop-login input:not([type="submit"]) {
 		width: 100%;
 	}
 
 	/*=== CATALOG ===*/
-	th:first-child, td:first-child {
+	.tab-content table {
+		max-width: 100vw;
+	}
+	.tab-content th, .tab-content td {
+		height: 2em;
+		border-width: 7px;
+	}
+	.tab-content th:first-child,
+	.tab-content td:first-child {
+		width:27%;
 		border-left: none;
 	}
-	th:last-child, td:last-child {
+	.tab-content th:nth-child(2),
+	.tab-content td:nth-child(2) {
+		width:33%;
+	}
+	.tab-content th:last-child,
+	.tab-content td:last-child {
+		width: 40%;
 		border-right: none;
+		text-align: center;
+		padding-left: 0;
+	}
+	.tab-content tr:last-child {
+		height: calc(91vh - 22px - 4em);
 	}
 
 	/*=== FORM ===*/
 	.tab-content form {
-		margin: 14px 10vw 70vh 10vw;
+		margin: 25px 8vw 70vh 8vw;
 		font-weight: normal;
-		font-size: 0.9em;
+		font-size: 0.8em;
 	}
 	.tab-content label {
 		display: block;
-		margin-bottom: 36px;
+		margin-bottom: 65px;
 	}
 	.tab-content label span {
-		display: block;
-		padding: 6px 25px 0 12px;
+		/*display: inline-block;*/
+		width: auto;
+		padding: 10px 50px 3px 18px;
 		border: none;
+		position: relative;
+		top: 3px;
 	}
 	.tab-content input:not([type="submit"]) {
-		height: 69px;
-		border-top: 7px solid;
+		height: 110px;
+		border-width: 12px 7px 7px 7px;
 		width: 100%;
+	}
+	.tab-content [type="submit"] {
+		display: block;
+		height: 110px;
+		width: 50vw;
+		margin: auto;
+		font-size: 1.2em;
+		border-width: 7px;
 	}
 	.tab-content .inp-default span {
 		color: #fff;
@@ -328,12 +381,12 @@ nav {
 		background-color: #e83014;
    }
    .tab-content .inp-warning input {
-	   height: 55px;
-	   border-bottom: 43px solid;
-	   width: calc(100% - 10px);
+	   height: 90px;
+	   border-bottom: 60px solid;
+	   width: calc(100% - 14px - 1em);
    }
 	.tab-content .inp-warning {
-		margin-bottom: 27px;
+		margin-bottom: 40px;
 	}
 	.tab-content .inp-success span {
 		color: #fff;
